# Chip8-Rust

./: README.md
chip8_core/src/: lib.rs
dekstop/: Cargo.toml
dekstop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.css  index.html  index.js  wasm.js  wasm_bg.wasm
