[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chip8_core = {path = "../chip8_core"}
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.72"
features = [
    "KeyboardEvent",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Window",
    "console"
]
